--- a/shopping/package.json
+++ b/shopping/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "stripe": "^11.13.0"
   },
   "devDependencies": {
     "jest": "^29.0.3"
